feat: implement logout functionality and enhance JWT authentication flow; add jsoup dependency for HTML processing